turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:25: error: expected start of definition
	override def run() { 
                 ^LangtonsAnt:38: error: Unmatched closing brace '}' ignored here
}
^