turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {	
			while(getCouleurSol()!=colors(i)){
				i=+1
				
				if(rule(i)=='R'){
								setCouleurBrosse(colors((i+1)%colors.length));
								droite();
								baisseBrosse();
								leveBrosse();
								avance();
							}else{
								setCouleurBrosse(colors((i+1)%colors.length));
								gauche();
								baisseBrosse();
								leveBrosse();
								avance();
								}
							}
						}
}
